--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-test
+<!DOCTYPE html>
+<html lang="ja">
+
+<head>
+  <meta charset="utf-8">
+  <title>JavaScript課題①-1</title>
+</head>
+
+<body>
+  <script src="js/main.js"></script>
+</body>
+
+</html>
